Fix #7. Update faq and make faq questions italic to improve readability

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,7 @@ h1 {
 
 h4, .question {
 	color: $secondary-color;
+	font-style: italic;
 }
 
 a {
